			Memo
			Reminds you about things
			by Thomas Leonard

TODO:
- Option/button to speak the time

01-Jul-2003
~~~~~~~~~~~
Bugfix: Dates didn't change format at midnight (eg 1 Jul -> Today)
	(reported by Graham Borland).

27-Jun-2003
~~~~~~~~~~~
Bugfix: '12 hour' clock option was showing 24 hour times.
	(reported by Graham Borland).

16-May-2003
~~~~~~~~~~~
New icon (Geoff Youngs).

31-Mar-2003 (Release 1.9.2)
~~~~~~~~~~~
New release.

11-Feb-2003
~~~~~~~~~~~
Upgraded to cope with pygtk-1.99.15.

20-Nov-2002 (Release 1.9.1)
~~~~~~~~~~~
Hack around another pygtk reference counting bug.

28-Oct-2002
~~~~~~~~~~~
Support pygtk 1.99.12 (RedHat 8.0) as well as current versions.
Hack around pygtk reference counting bug.

10-Sep-2002
~~~~~~~~~~~
Toggle hidden had stopped working with new pygtk.

07-Aug-2002
~~~~~~~~~~~
Text box for memo message now scrolls correctly (instead of just getting
larger and larger!).

13-Jul-2002 (Release 1.9.0)
~~~~~~~~~~~
Turned on word-wrapping in the editor dialog.

03-Jul-2002
~~~~~~~~~~~
Upgraded to Gtk+-2.0 and ROX-Lib2. New features:

- Dialog style for window.
- Options window (Sticky, Time style and Limits on which messages to display).
- When an alarm goes off, offer to hide the memo rather than delete it.
- Double-beep before showing alarm.
- Show All feature so you can see memos that are hidden or too far in the
  future.
- Delete multiple memos at once (from Show All box).

09-Nov-2001
~~~~~~~~~~~
Make 'Edit' the default button when an alarm appears, not 'Remove'.

25-Sep-2001 (Release 1.0.0)
~~~~~~~~~~~
Bugfix: Messages with <, > or & characters didn't save correctly.

17-Jul-2001
~~~~~~~~~~~
Beep and wait a second before showing an alarm. Otherwise, if an alarm
appears while you're typing you can lose it.

30-May-2001
~~~~~~~~~~~
Switched to using ROX-Lib.

29-May-2001 (Release 0.1.1)
~~~~~~~~~~~
Added AppInfo file.

19-Jan-2001
~~~~~~~~~~~
Main window widgets don't grab the focus (looks better).

13-Jan-2001
~~~~~~~~~~~
Started.