@@ -1,11 +1,19 @@
 <?xml version="1.0"?>
 <AppInfo>
-  <Summary>Shows the time and lets you set memos and alarms</Summary>
-  <About>
+  <Summary xml:lang="en">Shows the time and lets you set memos and alarms</Summary>
+  <Summary xml:lang="it">Mostra l'ora, punta la sveglia e scrive promemoria</Summary>
+  <About xml:lang="en">
     <Purpose>Alarm clock</Purpose>
     <Version>1.9.2 (31-Mar-2003)</Version>
     <Author>Thomas Leonard</Author>
     <License>GNU General Public License</License>
     <Homepage>http://rox.sourceforge.net</Homepage>
+  </About>
+  <About xml:lang="it">
+    <Purpose label="Scopo">orologio sveglia</Purpose>
+    <Version label="Versione"/>
+    <Author label="Autore"/>
+    <License label="Licenza"/>
+    <Homepage label="Sito web"/>
   </About>
 </AppInfo>
